# tito_gateway

./: .gitignore  README.md  README.zh-CN.md  plan.md  pyproject.toml
.github/workflows/: python-package.yml
.humanize/: .pending-session-id
.humanize/rlcr/2026-06-11_11-59-16/: goal-tracker.md  round-0-contract.md  round-0-prompt.md  round-0-summary.md  state.md
docs/: api.md  api.zh-CN.md  cli.md  cli.zh-CN.md  concepts.md  concepts.zh-CN.md  development.md  development.zh-CN.md  guide.md  guide.zh-CN.md  index.md  index.zh-CN.md  quickstart.md  quickstart.zh-CN.md  verification.md  verification.zh-CN.md
miles/: __init__.py  _upstream_loader.py
miles/rollout/: __init__.py  base_types.py
miles/rollout/generate_hub/: __init__.py  agentic_tool_call.py
miles/rollout/session/: __init__.py  linear_trajectory.py  session_errors.py  session_server.py  session_types.py  sessions.py
miles/utils/: __init__.py  hf_config.py  http_utils.py  processing_utils.py
miles/utils/chat_template_utils/: __init__.py  deepseek_v32.py  deepseek_v4.py  template.py  tito_tokenizer.py  token_seq_comparator.py
miles/utils/external_utils/: __init__.py  command_utils.py
miles/utils/test_utils/: __init__.py  chat_template_verify.py  mock_sglang_server.py  mock_trajectories.py  session_verify_agent.py  session_verify_runner.py  uvicorn_thread_server.py
scripts/: prepare_test_tokenizer_cache.py
tests/ci/: __init__.py  ci_register.py
tests/fast/: __init__.py
tests/fast/router/: __init__.py  session_pretokenized_test_utils.py
tests/package/: test_cli.py  test_config_discovery.py  test_gateway_integration.py  test_import_surface.py  test_session_verifier_plumbing.py  test_upstream_delegation.py  test_vendored_miles.py
tests/upstream/fast/router/: test_session_pretokenized_e2e.py  test_sessions.py
tests/upstream/fast/utils/chat_template_utils/: test_pretokenized_via_tito.py
tests/upstream/fast/utils/test_utils/: test_session_verify_runner.py
tito_gateway/: VENDORED_MILES_AUDIT.md  __init__.py  cli.py  config.py  discovery.py  gateway.py  server.py  tokenizer.py  upstream.json  verify_chat_template.py  verify_session_tito_tokenizer.py
