[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tito-gateway"
version = "0.1.0"
description = "Standalone wrapper package for Miles TITO session gateway work."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "TITO Gateway maintainers" },
]
keywords = ["tito", "agentic", "chat-template", "miles", "gateway"]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
templates = [
  "huggingface-hub>=0.23",
  "jinja2>=3.1",
  "transformers>=4.44",
]
test = [
  "pytest>=8",
  "requests>=2.31",
]

[project.scripts]
tito-gateway = "tito_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tito_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
