[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tito-gateway"
version = "0.1.0"
description = "Standalone wrapper package for Miles TITO session gateway work."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "TITO Gateway maintainers" },
]
keywords = ["tito", "agentic", "chat-template", "miles", "gateway"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2",
  "setproctitle>=1.3",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
verify = [
  "huggingface-hub>=0.23",
  "jinja2>=3.1",
  "sglang>=0.4",
  "tokenizers>=0.19",
  "transformers>=4.44",
]
test = [
  "huggingface-hub>=0.23",
  "jinja2>=3.1",
  "pytest>=8",
  "requests>=2.31",
  "sglang>=0.4",
  "tokenizers>=0.19",
  "transformers>=4.44",
]

[project.urls]
Homepage = "https://github.com/yitianlian/tito_gateway"
Documentation = "https://github.com/yitianlian/tito_gateway/tree/master/docs"
Repository = "https://github.com/yitianlian/tito_gateway"
"Miles upstream" = "https://github.com/radixark/miles"
"Miles documentation" = "https://www.radixark.com/miles/docs/user-guide/agentic-chat-template"

[project.scripts]
tito-gateway = "tito_gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tito_gateway", "miles"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "README.md",
  "README.zh-CN.md",
  "docs/**/*.md",
  "miles/**/*.py",
  "pyproject.toml",
  "scripts/**/*.py",
  "tests/**/*.py",
  "tests/**/*.jinja",
  "tito_gateway/**/*.json",
  "tito_gateway/**/*.md",
  "tito_gateway/**/*.py",
  "tito_gateway/**/*.jinja",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
